@@ -30,28 +30,56 @@
  * OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#pragma once
+#include "SpawnClient.hxx"
+#include "Marshal.hxx"
+#include "Send.hxx"
+#include "Receive.hxx"
+#include "translation/Protocol.hxx"
+#include "translation/Response.hxx"
+#include "AllocatorPtr.hxx"
+#include "net/SocketDescriptor.hxx"
 
-#include <chrono>
-#include <exception>
+#include <stdexcept>
 
-class UniqueFileDescriptor;
+using std::string_view_literals::operator""sv;
 
-class WorkshopControlChannelHandler {
-public:
-	virtual void OnControlProgress(unsigned progress) noexcept = 0;
-	virtual void OnControlSetEnv(const char *s) noexcept = 0;
-	virtual void OnControlAgain(std::chrono::seconds d) noexcept = 0;
+static void
+SendTranslateSpawn(SocketDescriptor s, const char *tag,
+		   const char *plan_name,
+		   const char *execute, const char *param)
 
-	/**
-	 * Throws on error.
-	 *
-	 * @return a pidfd
-	 */
-	virtual UniqueFileDescriptor OnControlSpawn(const char *token,
-						    const char *param) = 0;
+{
+	assert(execute != nullptr);
 
-	virtual void OnControlTemporaryError(std::exception_ptr e) noexcept = 0;
-	virtual void OnControlPermanentError(std::exception_ptr e) noexcept = 0;
-	virtual void OnControlClosed() noexcept = 0;
-};
+	if (strlen(execute) > 1024)
+		throw std::runtime_error("Translation parameter too long");
+
+	if (param != nullptr && strlen(param) > 4096)
+		throw std::runtime_error("Translation parameter too long");
+
+	TranslationMarshaller m;
+
+	m.Write(TranslationCommand::BEGIN);
+
+	m.Write(TranslationCommand::EXECUTE, execute);
+	m.Write(TranslationCommand::PLAN, plan_name);
+	m.Write(TranslationCommand::SERVICE, "workshop"sv);
+
+	if (param != nullptr)
+		m.Write(TranslationCommand::PARAM, param);
+
+	if (tag != nullptr)
+		m.Write(TranslationCommand::LISTENER_TAG, tag);
+
+	m.Write(TranslationCommand::END);
+
+	SendFull(s, m.Commit());
+}
+
+TranslateResponse
+TranslateSpawn(AllocatorPtr alloc, SocketDescriptor s, const char *tag,
+	       const char *plan_name, const char *execute, const char *param)
+{
+	SendTranslateSpawn(s, tag, plan_name, execute, param);
+	return ReceiveTranslateResponse(alloc, s);
+}
