@@ -58,6 +58,8 @@ WorkshopPartition::WorkshopPartition(Instance &_instance,
 	       *this),
 	 workplace(_spawn_service, *this, logger,
 		   root_config.node_name.c_str(),
+		   config.translation_socket,
+		   config.tag.empty() ? nullptr : config.tag.c_str(),
 		   root_config.concurrency,
 		   config.enable_journal),
 	 idle_callback(_idle_callback),
